# woodpecker

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  temp.py  temp2.py  temp3.py  temp4.py
.github/: DEPENDENCIES.md  INSTRUCTIONS.md
.github/ISSUE_TEMPLATE/: task-report.md
.github/skills/: CREATE_COMMIT.md  CREATE_OR_UPDATE_ISSUE.md  CREATE_OR_UPDATE_PR.md
benchmark/: interactive_rag.py  mini_rag.py
data/: .gitkeep
docs/: bao-cao-chinh-thuc.md  woodpecker_system_spec.md
src/: chunker.py  schema.py
src/woodpecker/: __init__.py  config.py
src/woodpecker/adapters/: __init__.py  marker_adapter.py
src/woodpecker/core/: __init__.py  chunker.py  cleaner.py
src/woodpecker/models/: __init__.py  schemas.py
src/woodpecker/pipeline/: __init__.py  processor.py
tests/: test_chunker.py  test_cleaner.py  test_marker_adapter.py  test_processor.py
